// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle should render 1`] = `
<div>
  <div
    class="sc-AxjAm iHggfL"
  />
</div>
`;

exports[`Circle should render as avatar 1`] = `
<div>
  <div
    class="sc-AxjAm ivSmSK"
  />
</div>
`;

exports[`Circle should render as blank 1`] = `
<div>
  <div
    class="sc-AxjAm iHggfL"
  />
</div>
`;

exports[`Circle should render extra-large 1`] = `
<div>
  <div
    class="sc-AxjAm eLzkCS"
  />
</div>
`;

exports[`Circle should render large 1`] = `
<div>
  <div
    class="sc-AxjAm bgfALy"
  />
</div>
`;

exports[`Circle should render small 1`] = `
<div>
  <div
    class="sc-AxjAm hYzvry"
  />
</div>
`;

exports[`Circle should render with content 1`] = `
<div>
  <div
    class="sc-AxjAm hYzvry"
  >
    <div
      data-testid="circle__content"
    />
  </div>
</div>
`;

exports[`Circle should render with no shadow 1`] = `
<div>
  <div
    class="sc-AxjAm iXzbbh"
  />
</div>
`;
